--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.11"
   }
 }
